# openapi-rust-cli

./: Cargo.toml  README.md  db.json  docker-compose.yaml  openapi.yaml
src/: errors.rs  http.rs  main.rs  openapi.rs
