[package]
name = "generic-openapi-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
miette = { version  = "7.2.0", features = ["backtrace"] }
openapiv3 = "2.0.0"
percent-encoding = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
thiserror = "1.0.65"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5.2"
